Hubzilla 5.2 (2021-xx-xx)
	- Use libzotdir for directory
	- Streamline usage of channel url for keyId
	- Basic work on PHP8 compatibility
	- Improve performance for form post edit action
	- Improve File App tiles view
	- Update es strings
	- Update ru strings
	- Implement directory download via zip files in Files App
	- Implement bulk file download via zip files in Files App
	- Deprecate ! and !! forum tags - use direct messages to post to forums
	- Do not show forums where we do not have permission to post in ACL selector
	- Implement lockview for Files App
	- Implement file and directory rename functionality Files App
	- Implement file and directory copy functionality in Files App
	- Implement file and directory move functionality in Files App
	- Implement categories for files and directories in Files App
	- Implement drag and drop move action for files and directories in Files App
	- Implement bulk file actions for move, copy, categories and permissions
	- Implement a files categories widget
	- Implement a breadcrumb view for file paths
	- Rewrite xchan_vcard template
	- Update composer libs

	Bugfixes
	- Fix ID3Parser composer autoload
	- Fix issue where directory_fallback_servers were not accessible from static function
	- Fix missing constant defenition for HUBLOC_OFFLINE
	- Fix sync_directories() including known dead sites
	- Fix undefined variable in poller preventing Onedirsync from running
	- Fix w2w posts not editable/deletable from local server
	- Fix issue where categories were not saved on forum wall posts
	- Fix no channel_id provided for contact_remove() in reply_purge()
	- Fix typo in notifier command
	- Fix profile title/description allowed more than 191 characters


	Addons
	- Queueworker: cleanup whitespace
	- Queueworker: add some tweaks to prevent deadlocks for postgresql
	- Flashcards: compatibility for the changes in the Files App
	- Openstreemap: fix hostname parsing from URL
	- Openstreemap: fix content security policy